Change Java version to 1.8 and add modid to log messages